--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,118 +14,138 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
-            <ImageView
-                android:id="@+id/logo_mandiri"
-                android:layout_width="53dp"
-                android:layout_height="53dp"
-                android:layout_marginTop="16dp"
-                android:src="@drawable/mandiri"
-                android:scaleType="centerCrop"
-                />
-
-            <TextView
-                android:id="@+id/appTitle"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="5dp"
-                android:layout_marginTop="25dp"
-                android:text="@string/news_title"
-                android:textSize="20sp"
-                android:textStyle="bold"
-                android:textColor="@color/black"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.24"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="@+id/logo_mandiri" />
-    </LinearLayout>
-    <!-- Gambar dan Deskripsi Berita -->
-    <TextView
-        android:id="@+id/latestNewsTextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:text="@string/lates_news"
-        android:textSize="18sp"
-        android:textStyle="normal"
-        android:textColor="@color/blueSecond"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/logo_mandiri" />
-
-    <androidx.cardview.widget.CardView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:cardCornerRadius="8dp"
+        android:orientation="horizontal"
+        android:weightSum="1"
+        android:background="@color/white"
         >
 
-        <LinearLayout
-            android:layout_width="match_parent"
+
+        <ImageView
+            android:id="@+id/logo_mandiri"
+            android:layout_width="115dp"
+            android:layout_height="53dp"
+            android:layout_marginTop="5dp"
+            android:src="@drawable/news"
+            android:scaleType="centerCrop"
+            />
+
+        <TextView
+            android:id="@+id/appTitle"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:background="@color/white">
+            android:layout_marginLeft="5dp"
+            android:layout_marginTop="15dp"
+            android:text="@string/news_title"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            android:textColor="@color/black"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.24"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/logo_mandiri" />
 
-            <ImageView
-                android:id="@+id/newsImageView"
-                android:layout_width="match_parent"
-                android:layout_height="200dp"
-                android:src="@drawable/mandiri"
-                app:layout_constraintTop_toBottomOf="@+id/latestNewsTextView"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                android:layout_marginTop="16dp"/>
+            <!-- Tombol Profil -->
+        <ImageView
+            android:id="@+id/about_page"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_marginLeft="90dp"
+            android:layout_marginTop="10dp"
+            android:background="?attr/selectableItemBackground"
+            android:onClick="openProfileActivity"
+            android:src="@drawable/baseline_account_circle_24"
+            android:text="Profil"
+            android:textSize="20sp" />
 
-            <TextView
-                android:id="@+id/descriptionTextView"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                app:layout_constraintTop_toBottomOf="@+id/newsImageView"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                android:layout_marginTop="8dp"
-                android:text="title news"
-                android:layout_marginLeft="4dp"
-                android:textAlignment="viewStart"
-                android:textColor="@color/bluePrimary"
-                android:textSize="16sp"/>
+    </LinearLayout>
 
-            <!-- Sumber Berita dan Tanggal Berita -->
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:layout_marginTop="8dp"
-                >
-                <TextView
-                    android:id="@+id/source_news"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="4dp"
-                    android:layout_marginLeft="4dp"
-                    android:text="@string/source_news"
-                    android:textAlignment="viewStart"
-                    android:textColor="@color/bluePrimary"
-                    android:textSize="12sp"
-                    />
+    <!-- Gambar dan Deskripsi Berita -->
+<!--    <TextView-->
+<!--        android:id="@+id/latestNewsTextView"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_marginTop="8dp"-->
+<!--        android:text="@string/lates_news"-->
+<!--        android:textSize="18sp"-->
+<!--        android:textStyle="normal"-->
+<!--        android:textColor="@color/blueSecond"-->
+<!--        app:layout_constraintEnd_toEndOf="parent"-->
+<!--        app:layout_constraintHorizontal_bias="0.0"-->
+<!--        app:layout_constraintStart_toStartOf="parent"-->
+<!--        app:layout_constraintTop_toBottomOf="@+id/logo_mandiri" />-->
 
-                <TextView
-                    android:id="@+id/date_news"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="4dp"
-                    android:layout_marginLeft="150dp"
-                    android:text="tanggal"
-                    android:textAlignment="viewStart"
-                    android:textColor="@color/bluePrimary"
-                    android:textSize="12sp"
-                    />
-            </LinearLayout>
-        </LinearLayout>
+<!--    <androidx.cardview.widget.CardView-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        app:cardCornerRadius="8dp"-->
+<!--        >-->
+
+<!--        <LinearLayout-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:orientation="vertical"-->
+<!--            android:background="@color/white">-->
+
+<!--            <ImageView-->
+<!--                android:id="@+id/newsImageView"-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="200dp"-->
+<!--                android:src="@drawable/mandiri"-->
+<!--                app:layout_constraintTop_toBottomOf="@+id/latestNewsTextView"-->
+<!--                app:layout_constraintStart_toStartOf="parent"-->
+<!--                app:layout_constraintEnd_toEndOf="parent"-->
+<!--                android:layout_marginTop="16dp"/>-->
+
+<!--            <TextView-->
+<!--                android:id="@+id/descriptionTextView"-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                app:layout_constraintTop_toBottomOf="@+id/newsImageView"-->
+<!--                app:layout_constraintStart_toStartOf="parent"-->
+<!--                app:layout_constraintEnd_toEndOf="parent"-->
+<!--                android:layout_marginTop="8dp"-->
+<!--                android:text="title news"-->
+<!--                android:layout_marginLeft="4dp"-->
+<!--                android:textAlignment="viewStart"-->
+<!--                android:textColor="@color/bluePrimary"-->
+<!--                android:textSize="16sp"/>-->
+
+<!--            &lt;!&ndash; Sumber Berita dan Tanggal Berita &ndash;&gt;-->
+<!--            <LinearLayout-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:orientation="horizontal"-->
+<!--                android:layout_marginTop="8dp"-->
+<!--                >-->
+<!--                <TextView-->
+<!--                    android:id="@+id/source_news"-->
+<!--                    android:layout_width="wrap_content"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:layout_marginTop="4dp"-->
+<!--                    android:layout_marginLeft="4dp"-->
+<!--                    android:text="@string/source_news"-->
+<!--                    android:textAlignment="viewStart"-->
+<!--                    android:textColor="@color/bluePrimary"-->
+<!--                    android:textSize="12sp"-->
+<!--                    />-->
+
+<!--                <TextView-->
+<!--                    android:id="@+id/date_news"-->
+<!--                    android:layout_width="wrap_content"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:layout_marginTop="4dp"-->
+<!--                    android:layout_marginLeft="150dp"-->
+<!--                    android:text="tanggal"-->
+<!--                    android:textAlignment="viewStart"-->
+<!--                    android:textColor="@color/bluePrimary"-->
+<!--                    android:textSize="12sp"-->
+<!--                    />-->
+<!--            </LinearLayout>-->
+<!--        </LinearLayout>-->
 
 
 
-    </androidx.cardview.widget.CardView>
+<!--    </androidx.cardview.widget.CardView>-->
 
     <TextView
         android:id="@+id/allNews"
